notifications: fixes alarm bell position on mobile

--- a/components/layout/header/index.styl
+++ b/components/layout/header/index.styl
@@ -127,12 +127,12 @@
     &.has-notifications:after
       display block
       content ' '
-      height 5px
+      height 4px
       width 8px
       border-radius 100px 100px 0 0
       background-color private
       position absolute
-      top 45px
+      top 46px
       right 45px
 
     .logo-icon svg
@@ -279,6 +279,10 @@
 
     li
       line-height 30px
+    
+    .logo
+      &.has-notifications:after
+        right 34px
 
   .dropdown
     position fixed
